Add support for custom comparators and reporters (#48)
Comparators & Reporters

- Introduce pluggable comparators & reporters
- Introduce SerializerType enum
- Add an isCi check to prevent creation of snapshots if running on a CI environment
- Use opentest4j to add IDE comparison support